# Lisp

./: .gitignore  LICENSE.txt  Library.lisp  Lisp.py  Lisp.wpr  Lisp.wpu  LispAST.py  LispInterpreter.py  LispParser.py  Lispy.py  README.md  README.txt  doc_lisp.txt  lisp.wpr  lisp.wpu  pyproject.toml  test01-calculations.lisp  test01-constants.lisp  test02-calculations.lisp  test02-variables.lisp  test03-predicates.lisp  test04-dataTypes.lisp  test04-relationals.lisp  test05-controlStructs.lisp  test05-logical.lisp  test06-macros.lisp  test07-listops.lisp  test08-variables.lisp  test10-dataTypes.lisp  test12-macros.lisp
doc/: README.txt  developmentPlan.txt  doc_lisp.txt
lib/: Library.lisp  lib00-core.lisp  lib10-predicates.lisp  lib20-math.lisp
ltk/: Environment.py  Listener.py  Parser.py  __init__.py
pythonslisp/: AST.py  Analyzer.py  CEK.py  Cons.py  Context.py  Debugger.py  Environment.py  Evaluator.py  Exceptions.py  Expander.py  Highlighter.py  Interpreter.py  LambdaList.py  Lisp.py  LispAST.py  LispAnalyzer.py  LispArgBinder.py  LispContext.py  LispEnvironment.py  LispExceptions.py  LispExpander.py  LispInterpreter.py  LispParser.py  Listener.py  Parser.py  ParserBase.py  Tracer.py  Utils.py  __init__.py  __main__.py  checkbook2.lisp  helpTopics.py  listener.lisp  primitiveDocs.py  readline_win.py  readlinetest.py  startup.lisp
pythonslisp/doc/: developmentPlan.txt  doc_lisp.txt
pythonslisp/examples/: IttyBittyLisp1a.py  IttyBittyLisp1b.py  IttyBittyLisp2.py  IttyBittyLisp3.py  IttyBittyParser.py  evaluator.py  my_extension.py
pythonslisp/extensions/: __init__.py  conditions.lisp  conditions.py  control.lisp  control.py  core.lisp  datatypes.lisp  debug.lisp  debug.py  io.lisp  io.py  math.lisp  math.py  meta.lisp  meta.py  modules.py  pathnames.py  predicates.lisp  predicates.py  sequences.lisp  sequences.py  (+5 more)
src/: .gitignore
testing/: test02-calculations.lisp  test03-predicates.lisp  test04-relationals.lisp  test05-logical.lisp  test06-conversions.lisp  test08-variables.lisp  test10-dataTypes.lisp  test11-controlStructs.lisp  test12-macros.lisp
(+200 files in other folders)
