[project]
name = "pythonslisp"
version = "0.22.0"
authors = [
  { name="Ronald H Provost/Longo", email="ronlongo9@outlook.com" },
]
description = "A small Common Lisp implementation.  Call lisp and python from one another."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-2.0-or-later"
license-files = [ "LICENSE*" ]

[projects.scripts]
lisp = "pythonslisp.lisp:main"

[project.urls]
Homepage = "https://github.com/rprovost11-sketch/Lisp"
Issues = "https://github.com/rprovost11-sketch/Lisp"
